fixed minor layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -18,14 +18,28 @@ body {
   background-color: black;
 }
 
+header, footer {
+  background-color: rgb(45, 56, 68);
+}
+
+
+nav {
+  width: 100%;
+  height: 100%;
+}
+
 main {
   color: white;
   background-color: rgb(27, 31, 35);
 }
 
 ul, ol {
+  height: 100%;
+  width: 100%;
   list-style: none;
   margin: 0px;
+  display: flex;
+  flex-direction: column;
 }
 
 li {
@@ -47,22 +61,23 @@ li {
   flex-grow: 1;
 }
 
+header, footer, .secondHeader {
+  flex-basis: 5%;
+}
+
 /* main element = column container */
 main {
-  height: 80vh;
+  flex-basis: 85%;
   display:  flex;
   flex-flow: row nowrap;
   justify-content: center;
   column-gap: 25px;
 }
 
-nav {
-  width: 100%;
-  height: 100%;
-}
-
 nav > ul {
+  flex-grow: 1;
   display: flex;
+  flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
 }
@@ -89,6 +104,7 @@ nav > ul > li {
 
 #currentEvent > ul {
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
 }
 
